# SimplyCodec_ffmpegDecode

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
source/Lib.TCMarker/: CMakeLists.txt  IAJA_TcOSD.cpp  IAJA_TcOSD.h  MarkerBuilder.h  NtvFormatDescriptor.h  ReadMe.txt  picoPNG_test.cpp  tcOSD.cpp  tcOSD.h  timecodeburn.cpp  timecodeburn.h  vitc.cpp  vitc.h
source/Lib.TCMarker/classes/: DDRBaseControl.cpp  DDRBaseControl.h  DDREthernetControl.cpp  DDREthernetControl.h  characterdata.h  ntv2audio.cpp  ntv2audioloopback.cpp  ntv2audioloopback.h  ntv2autocirculate.cpp  ntv2bitfile.cpp  ntv2bitfileheader.cpp  ntv2bitfileheader.h  ntv2boardfeatures.cpp  ntv2boardscan.cpp  ntv2card.cpp  ntv2card.h  ntv2config2022.cpp  ntv2config2022.h  ntv2configts2022.cpp  ntv2configts2022.h  ntv2debug.cpp  ntv2devicefeatures.cpp  ntv2devicefeatures.hh  ntv2devicefeatures.hpp  ntv2dma.cpp  ntv2driverinterface.cpp  ntv2driverinterface.h  ntv2driverprocamp.cpp  ntv2konaflashprogram.cpp  ntv2mailbox.cpp  ntv2mailbox.h  ntv2mbcontroller.cpp  ntv2mbcontroller.h  ntv2mcsfile.cpp  ntv2nubaccess.cpp  ntv2nubpktcom.cpp  ntv2nubpktcom.h  ntv2preferences.cpp  ntv2preferences.h  ntv2register.cpp  (+14 more)
source/Lib.TCMarker/democlasses/: ajacircularbuffer.h  ntv2burn4kquadrant.cpp  ntv2burn4kquadrant.h  ntv2burnboardtoboard.cpp  ntv2burnboardtoboard.h  ntv2capture.cpp  ntv2capture.h  ntv2ccplayer.cpp  ntv2ccplayer.h  ntv2cudacapture.cpp  ntv2cudacapture.h  ntv2democommon.h  ntv2encodehevc.cpp  ntv2encodehevc.h  ntv2encodehevcfile.cpp  ntv2encodehevcfile.h  ntv2encodehevcfileac.cpp  ntv2encodehevcfileac.h  ntv2encodehevcvif.cpp  ntv2encodehevcvif.h  ntv2encodehevcvifac.cpp  ntv2encodehevcvifac.h  ntv2enumerateboards.cpp  ntv2enumerateboards.h  ntv2fieldburn.cpp  ntv2fieldburn.h  ntv2framegrabber.cpp  ntv2llburn.cpp  ntv2oglcapture.cpp  ntv2oglcapture.h  ntv2ogldpxreader.cpp  ntv2ogldpxreader.h  ntv2ogloutput.cpp  ntv2ogloutput.h  ntv2playbackdpx.cpp  ntv2playbackdpx.h  ntv2player.cpp  ntv2player4k.cpp  ntv2recorddpx.cpp  ntv2recorddpx.h  (+1 more)
source/Lib.TCMarker/includes/: Includes.dsp  Includes.vcproj  Includes_vs11.vcxproj  Includes_vs9.vcproj  MacDriverInterfaceVersion.h  ajatypes.h  ntv2daemonappleevents.h  ntv2enums.h  ntv2m31enums.h  ntv2m31publicinterface.h  ntv2macpublicinterface.h  ntv2publicinterface.h  ntv2virtualregisters.h
source/Main/: CMakeLists.txt  aa.cpp  ffmpegDecoder.h  main2.cpp  mainX.cpp
submodule/std-simplylive/: .gitignore  CMakeLists.txt
submodule/std-simplylive/include/: FrameList.h  LoopBuffer.h  RWLocker.h  asyncFileWriter.h  asyncThread.h  clockTimer.h  commonHelper.h  consoleUtil.h  cpuTick.h  dllParser.h  eventClock.h  fpsHelper.h  ipHelper.h  lockedPtr.h  locker.h  magic_enum.hpp  os.h  (+12 more)
(+152 files in other folders)
